deployment/kubernetes/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saas-docs
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: docs.localdev.me
      http:
        paths:
          - backend:
              service:
                name: saas-docs
                port:
                  number: 80
            path: /
            pathType: Prefix
